# risk-security-ctrl

./: .gitignore  CLAUDE.md  README.md
backend/: .env.example  .gitignore  Cargo.toml  run-dev.bat  test-api.sh
backend/.cargo/: config.toml.msvc-backup
backend/.sqlx/: query-1461bd2bf185983f38f35d42ba38f280e60f77b279c3278a8cb45c2e4f7664d1.json  query-177181cc4df1f861a94a49fce63e4807e0cf92a3c8ca252ecdc0d8e51a6d0cf7.json  query-43af7046123221cc4148d3746533e0f5a7859436f1aa9b5fc70877646c388bd8.json  query-da6b9472ebf56134682a5f2c3bd763527be14d7fd24daa261a571de0df8df0e2.json
backend/migrations/: 001_initial_schema.sql  002_evidence_schema_update.sql  003_analysis_schema.sql  004_guidance_data_schema.sql  005_verification_provenance.sql  006_source_trust_tier.sql
backend/src/: config.rs  error.rs  import.rs  lib.rs  main.rs
backend/src/features/: mod.rs
backend/src/features/analysis/: charts.rs  engine.rs  export_docx.rs  export_pdf.rs  matcher.rs  mod.rs  models.rs  parser.rs  routes.rs  tokenizer.rs  upload.rs
backend/src/features/auth/: extractors.rs  middleware.rs  mod.rs  models.rs  password.rs  permissions.rs  rate_limit.rs  routes.rs  service.rs
backend/src/features/compliance/: models.rs  routes.rs
backend/src/features/extraction/: cli.rs  extractor.rs  mod.rs  page_offset.rs  validation.rs
backend/src/features/ontology/: models.rs  routes.rs
backend/src/features/reports/: routes.rs
backend/tests/: analysis_tests.rs  api_tests.rs  auth_tests.rs  compliance_tests.rs  extraction_tests.rs  guidance_tests.rs  integration_guidance_tests.rs  seed_admin.rs
backend/tests/common/: mod.rs
(+853 files in other folders)
