[package]
name = "ontology-backend"
version = "0.1.0"
edition = "2021"
description = "Risk Management Framework Explorer API"
authors = ["Ontology Team"]

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros", "multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "trace"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }

# OpenAPI / Swagger
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async trait support
async-trait = "0.1"

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
dotenvy = "0.15"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Document parsing
pdf-extract = "0.10"
zip = "2"
quick-xml = "0.37"

# Chart rendering
plotters = "0.3"
image = "0.25"

# PDF export
genpdf = { version = "0.2", features = ["images"] }

# DOCX export
docx-rs = "0.4"

[lib]
name = "ontology_backend"
path = "src/lib.rs"

[[bin]]
name = "ontology-backend"
path = "src/main.rs"

[dev-dependencies]
tokio-test = "0.4"
tower = { version = "0.5", features = ["util"] }
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
